[package]
name = "SecureSynchronizer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
aes = "0.8.3"
bincode = "1.3.3"
clipboard = "0.5.0"
futures = "0.3.29"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
sha256 = "1.4.0"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
awc = "3.2.0"
curl = "0.4.44"
